--- a/bosutils/pom.xml
+++ b/bosutils/pom.xml
@@ -16,6 +16,11 @@
             <artifactId>bos-domain</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.geronimo.specs</groupId>
+            <artifactId>geronimo-javamail_1.4_spec</artifactId>
+            <version>1.7.1</version>
+        </dependency>
     </dependencies>
 
 
